# voiceclaw

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  debug_todo.md  docker-compose.yml  railway.json  railway.toml
agent/: .gitkeep  CLAUDE.md  Dockerfile  pyproject.toml
agent/adapters/: device.py  gateway.py  session.py  skills.py
agent/adapters/tests/: test_device.py  test_session.py  test_skills.py
docs/: CLAUDE_CODE_HANDOVER.md  roadmap.md  voiceclaw-erd-v3.md
docs/architecture/: overview.md  upstream-compatibility.md
docs/deployment/: railway.md
docs/skills/: skill-builder.md  voice-bridge-skills.md
infra/: .gitkeep  docker-compose.railway.yml  railway.toml
pwa/: .gitkeep  index.html  package-lock.json  package.json  vite.config.ts
pwa/public/dev-dist/: sw.js
pwa/src/: App.tsx  index.css
skills/calendar-voice-bridge/: SKILL.md
skills/skill-builder/: SKILL.md
voice/: .gitkeep  CLAUDE.md  Dockerfile  pyproject.toml
voice/adapters/: events.py  pipeline.py  skills.py  transport.py
voice/adapters/tests/: test_events.py
voice/voiceclaw/: server.py  session.py
