[project]
name = "voiceclaw-agent"
version = "0.1.0"
description = "VoiceClaw agent gateway — OpenClaw adapter layer"
requires-python = ">=3.12,<3.14"
dependencies = [
    "websockets>=13.0",
    "cryptography>=43.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["adapters/tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "voiceclaw"]
